--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,40 @@
     margin: 0;
     box-sizing: border-box;
 }
-.container{
-    max-width: 1100px;
-    background-color: #ffffff;
-    margin: auto;
-    padding: 0 3rem;
-    font-family: 'Open Sans', sans-serif;
+:root{
+    /* Primary */
+    --very-Darck-Blue:hsl(243, 87%, 12%);
+    --Desaturated-Blue:hsl(238, 22%, 44%);
+    /* Accent */
+    --Bright-Blue:hsl(224, 93%, 58%);
+    --Moderate-Cyan: hsl(170, 45%, 43%);
+    /* Neutral */
+    --Light-Grayish-Blue: hsl(240, 75%, 98%);
+    --Light-Gray: hsl(0, 0%, 75%);
 }
 body{
-    background: url(../images/bg-curve-desktop.svg);
-    background-repeat: no-repeat;
-    background-position: center ;
-    background-size: cover;
-    z-index: 100;
+    font-family: 'Open Sans', sans-serif;
+}
+.container{
+    max-width: 1200px;
+    background-color: #ffffff;
+    margin: auto;
+    padding: 2rem;
+}
+.row-one div.container,
+.row-tow div.container{
+    display: flex;
+}
+picture img{
+    width: 100%; 
+}
+
+.row-one div.container > div,
+.row-tow div.container > div{
+    width: 100%;
 }
 /* Mobile */
-@media (max-width:862px) {
+@media (max-width:375px) {
     .container{
         min-width: 100%;
         text-align: center;
@@ -33,43 +51,10 @@ body{
     }
     .illustration-2{
         order: 3;
-        margin: auto;
     }
     .row-tow{
         order: 4;
-        margin: auto;
     }
-    div.container{
-        flex-direction: column;
-        gap: 2rem;
-    }
-    div.card,
-    div.link{
-        margin: 0 auto 1rem  ;
-    }
-    div.container div,
-    div.container form {
-        min-width: 100%;
-    }
-    form{
-        justify-content: center;
-    }
-    form input{
-        min-width: 60%;
-    }
-    footer div.container img{
-        width: 200px;
-        max-width: 100%;
-    }
-    footer section.container {
-        display: block;
-        text-align: left;
-    }
-    .information, 
-    .about-us{
-        margin-bottom: 2rem;
-    }
-    
 
 }
 /* Desktop */
@@ -80,69 +65,46 @@ body{
 /* End Global Rulse */
 
 /* Start Header */
-.header{
-    padding: 2rem 0;
+header{
+    font-family: 'Raleway', sans-serif;
+}
+header div.container{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-section.header img{
-    min-width: clamp(13px , 4vw , 17px);
-    max-width: 200px;
-}
-ul{
+header div.container ul{
     list-style: none;
-    min-width: 220px;
 }
-ul li{
+header div.container ul li{
     display: inline;
     margin-left: 1rem;
-    font-size: clamp(13px , 4vw , 17px);
+}
+header div.container ul li a{
+    color: var(--very-Darck-Blue);
+    text-decoration: none;
 }
 /* End Header */
 
-/* Start Main  */
-
-/* Start Row-One */
-main.container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit , minmax(375px , 1fr));
-    align-items: center;
-    gap: 4rem 0;
-    margin-bottom: 4rem;
-    z-index: 1;
-}
-h1{
-    font-family: 'Raleway', sans-serif;
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    color: hsl(243, 87%, 12%);
-}
-.description-one{
-    font-weight: 484px;
-    margin-bottom: 1rem;
-    color: hsl(243, 87%, 12%);
-}
-picture img{
-    width: 534px;
-    max-width: 100%;
-}
+/* Start Form */
 form{
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
 }
 form [type = email]{
-    height: 2.5rem;
-    width: 50%;
+    flex: 0.6;
+    min-width: fit-content;
+    padding: 1rem;
     outline: none;
-    padding-left: 0.5rem;
-    border-color: hsl(0, 0%, 75%);
+    border: none;
+    border: 1px solid var(--Light-Gray);
 }
 form [type = submit]{
-    height: 2.5rem;
-    width: 30%;
-    background-color: hsl(224, 93%, 58%);
+    flex: 0.3;
+    min-width: fit-content;
+    padding: 0 1.5rem;
+    background-color: var(--Bright-Blue);
     color: white;
     font-weight: 400;
     border: none;
@@ -161,43 +123,54 @@ form [type = submit]:hover{
     cursor: pointer;
     opacity: 0.7;
 }
-/* End Row-One */
+.row-three .container form [type = email]{
+    min-width: 90%;
+}
+.row-three .container form [type = submit]{
+    padding: 1rem 0;
 
-/* Start Row-Tow */
+}
+/* End Form */
 
+/* Start Style Heading And Paragraph */
+h1,
 h2{
     font-family: 'Raleway', sans-serif;
-    font-size: 2rem;
+    font-weight: 700;
     margin-bottom: 1rem;
-    color: hsl(243, 87%, 12%);
+    font-size: 2.2rem;
+    color: var(--very-Darck-Blue);
 }
-.description-tow{
+.description{
     font-weight: 400;
+    font-size: 1.1rem;
     margin-bottom: 1rem;
-    color: hsl(243, 87%, 12%);
+    color: var(--very-Darck-Blue);
 }
-.link{
-    display: flex;
-    gap: 2px;
-    align-items: center;
-    border-bottom: 1px solid hsl(170, 45%, 43%);
+/* End Style Heading And Paragraph*/
+
+/* Start Row-Tow */
+div.link{
+    border-bottom: 1px solid var(--Moderate-Cyan);
     width: fit-content;
-    height: 25px;
     transition: 0.3s;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
     -ms-transition: 0.3s;
     -o-transition: 0.3s;
 }
-.link:hover{
+div.link:hover{
     opacity: 0.7;
 }
-a{
+div.link a{
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
     text-decoration: none;
-    color: hsl(170, 45%, 43%);
+    color: var(--Moderate-Cyan);
     font-size: 16px;
 }
-.card{
+div.card{
     margin-top: 3rem;
     padding: 2rem;
     border-radius: 0.4rem;
@@ -205,14 +178,13 @@ a{
     -moz-border-radius: 0.4rem;
     -ms-border-radius: 0.4rem;
     -o-border-radius: 0.4rem;
-    box-shadow: 0 0 10px 1px hsl(0, 0%, 75%) ;
+    box-shadow: 0 0 10px 1px var(--Light-Gray);
     max-width: 400px;
-    text-align: left;
 }
-.card :first-child{
+div.card .quotes{
     width: 20px;
 }
-.description-three{
+div.card > p{
     line-height: 1.75rem;
     font-size: 1rem;
     margin-bottom: 1rem;
@@ -231,83 +203,68 @@ a{
     align-items: center;
     line-height: 1.5rem;
 }
-.card .name{
+.card > div .name{
     font-size: 15px;
     width: fit-content;
     font-weight: bolder;
-    color: hsl(243, 87%, 12%);
+    color: var(--very-Darck-Blue);
 }
-.job{
+.card > div .job{
     font-size: 12px;
-    color: hsl(243, 87%, 12%);
+    color: var(--very-Darck-Blue);
 }
-.illustration-2{  
-    width: 534px;
-    max-width: 100%;
-}
+
 /* End Row-Tow */
+
 /* Start Row-Three */
-body > section{
-    background-color: hsl(238, 22%, 44%);
+.row-three,
+.row-three div.container{
+    background-color: var(--Desaturated-Blue);
 }
-div.container{
-    display: flex;
-    justify-content: space-between;
-    padding: 3rem 3rem;
-    background-color: hsl(238, 22%, 44%);
+.row-three div.container p,
+.row-three div.container h2{
     color: white;
 }
-h3{
-    font-family: 'Raleway', sans-serif;
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+.row-three {
+    padding: 4rem 0;
 }
-div.container div ,
-div.container form{
+.row-three div.container{
+    display: flex;
+    justify-content: space-between;
+}
+.row-three div.container div,
+.row-three div.container form{
     width: calc(90% / 2);
 }
-div.container form [type = email]{
-    width: 90%;
-    margin-bottom: 1rem;
-}
-div.container form [type = submit]{
-    width: fit-content;
-    padding: 1rem;
-    font-weight: 400;
-}
 /* End Row-Three */ 
-
-/* End Main  */ 
 
 /* Start Footer */
 footer{
     padding: 4rem 3rem ;
 }
 footer,
+footer div.container,
 section.container{
-    background-color: hsl(243, 87%, 12%);
+    background-color: var(--very-Darck-Blue);
     color: white;
 }
-footer div.container{
-    background-color: hsl(243, 87%, 12%);
-    padding: 0 0 1rem 0 ;
+footer section.container{
+    display: flex;
+    justify-content: space-between;
 }
-section.container{
-    display: grid;
-    grid-template-columns: repeat(3 , 1fr);
-}
-.information div{
+.information p{
     margin-bottom: 1rem;
 }
-.information div p{
-    display: inline;
-    margin-left: 1rem;
+.information p img{
+    margin-right: 1rem;
 }
-.about-us ul li,
-.contact-us ul li{
-    display: block;
+footer nav {
     margin-bottom: 1rem;
-    margin-left: 0;
 }
-
+footer nav ul {
+    list-style: none;
+}
+footer nav ul li{
+    margin-bottom: 1rem;
+}
 /* End Footer */
