--- a/css/style.css
+++ b/css/style.css
@@ -22,40 +22,48 @@ body{
 .container{
     max-width: 1200px;
     background-color: #ffffff;
-    margin: auto;
+    margin: 0 auto;
     padding: 2rem;
 }
-.row-one div.container,
-.row-tow div.container{
-    display: flex;
-}
-picture img{
-    width: 100%; 
-}
 
-.row-one div.container > div,
-.row-tow div.container > div{
-    width: 100%;
-}
 /* Mobile */
-@media (max-width:375px) {
-    .container{
-        min-width: 100%;
+@media (max-width:355px) {
+    header div.container {
+        flex-direction: column;
+        gap: 1rem;
+    }
+}
+@media (max-width:768px) {
+    body{
         text-align: center;
     }
-    .illustration-1{
-        order: 1;
+    footer section.container,
+    .row-one div.container,
+    .row-tow div.container{
+        flex-direction: column;
     }
-    .row-one{
-        order: 2;
+    div.card,
+    footer section.container{
+        text-align: left;
     }
-    .illustration-2{
-        order: 3;
-    }
-    .row-tow{
-        order: 4;
-    }
+    .row-three div.container div,
+    .row-three div.container form{
+        min-width: 100%;
 
+    }
+    .row-one > .container form [type = email],
+    .row-one > .container form [type = submit],
+    .row-three .container form [type = email],
+    .row-three .container form [type = submit]{
+        flex: 1;
+    }
+    footer div.container{
+        text-align: left;
+    }
+    div.information,
+    footer nav ul{
+        margin-bottom: 2rem;
+    }
 }
 /* Desktop */
 @media (max-width:1440px) {
@@ -64,6 +72,10 @@ picture img{
 
 /* End Global Rulse */
 
+/* background-desktop */
+.background-desktop{
+    width: 100%;
+}
 /* Start Header */
 header{
     font-family: 'Raleway', sans-serif;
@@ -72,6 +84,9 @@ header div.container{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+header div.container img{
+    width: clamp(80px , 30% ,160px);
 }
 header div.container ul{
     list-style: none;
@@ -83,13 +98,36 @@ header div.container ul li{
 header div.container ul li a{
     color: var(--very-Darck-Blue);
     text-decoration: none;
+    font-size: clamp(14px , 20% , 16px);
 }
 /* End Header */
+
+/* Start row-one  */
+.row-one  > div.container,
+.row-tow > div.container{
+    display: flex;
+}
+.row-one {
+    margin-bottom: 5rem;
+} 
+.row-one .container .call-to-actions{
+    margin-bottom: 2rem;
+}
+picture img{
+    width: 100%; 
+}
+
+.row-one div.container > div,
+.row-tow div.container > div{
+    width: 100%;
+}
+/* End row-one  */
 
 /* Start Form */
 form{
     display: flex;
     flex-wrap: wrap;
+    align-content: flex-start;
     gap: 1rem;
 }
 form [type = email]{
@@ -103,7 +141,7 @@ form [type = email]{
 form [type = submit]{
     flex: 0.3;
     min-width: fit-content;
-    padding: 0 1.5rem;
+    padding: 1rem;
     background-color: var(--Bright-Blue);
     color: white;
     font-weight: 400;
@@ -125,10 +163,10 @@ form [type = submit]:hover{
 }
 .row-three .container form [type = email]{
     min-width: 90%;
+
 }
 .row-three .container form [type = submit]{
-    padding: 1rem 0;
-
+    min-width: fit-content;
 }
 /* End Form */
 
@@ -138,7 +176,7 @@ h2{
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     margin-bottom: 1rem;
-    font-size: 2.2rem;
+    font-size: clamp(2.2rem , 60% , 24px);
     color: var(--very-Darck-Blue);
 }
 .description{
@@ -150,28 +188,50 @@ h2{
 /* End Style Heading And Paragraph*/
 
 /* Start Row-Tow */
+.row-tow,
+.row-tow > div.container{
+    background-color: var(--Light-Grayish-Blue);
+}
+.row-tow{
+    position: relative;
+}
+.row-tow::before{
+    content: "";
+    background-image: url(../images/bg-curve-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    position: absolute;
+    width: 100%;
+    height: 60px;
+    left: 0;
+    top: -60px;
+}
 div.link{
     border-bottom: 1px solid var(--Moderate-Cyan);
-    width: fit-content;
+    /* width: fit-content; */
     transition: 0.3s;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
     -ms-transition: 0.3s;
     -o-transition: 0.3s;
 }
-div.link:hover{
+.link:hover{
     opacity: 0.7;
 }
-div.link a{
-    display: flex;
+.link {
+    display: inline-flex;
     align-items: center;
     gap: 0.5rem;
     text-decoration: none;
+    border-bottom: 1px solid var(--Moderate-Cyan);
     color: var(--Moderate-Cyan);
     font-size: 16px;
+    
 }
 div.card{
-    margin-top: 3rem;
+    background-color: white;
+    margin: 3rem 0;
     padding: 2rem;
     border-radius: 0.4rem;
     -webkit-border-radius: 0.4rem;
@@ -224,6 +284,7 @@ div.card > p{
 .row-three div.container p,
 .row-three div.container h2{
     color: white;
+    margin-bottom: 1rem;
 }
 .row-three {
     padding: 4rem 0;
@@ -240,7 +301,7 @@ div.card > p{
 
 /* Start Footer */
 footer{
-    padding: 4rem 3rem ;
+    padding: 4rem 0 ;
 }
 footer,
 footer div.container,
@@ -257,9 +318,6 @@ footer section.container{
 }
 .information p img{
     margin-right: 1rem;
-}
-footer nav {
-    margin-bottom: 1rem;
 }
 footer nav ul {
     list-style: none;
